agregados creditos del autor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Race</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="autor">Nelson Pedrosa Pena 2015 DAM2 que bueno soy!!</string>
 
 </resources>
